<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Gowtham Parimelazhagan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_gray"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="28dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="356dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="35dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="81dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="94dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
android:gravity="center"

        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        android:layout_marginEnd="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1">

        <android.support.v7.widget.CardView
            android:id="@+id/login_cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="84dp">

            <com.gm.common.widget.GmTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="60dp"
                android:text="@string/login_title"
                android:textAllCaps="true"
                android:textSize="20sp"
                app:setFont="Noto_SansUI" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/edt_mobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/edt_pwd" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:passwordToggleDrawable="@drawable/asl_password_visibility"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?colorControlNormal">

                    <com.gm.common.widget.PasswordEditText
                        android:id="@+id/edt_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minLines="1"
                        android:selectAllOnFocus="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_server_login"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textSize="18sp" />

                <com.gm.common.widget.GmTextView
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/semi_gray"
                    android:textSize="12sp"
                    app:setFont="Noto_SansUI" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_google_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/img_desc_google_login"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_google_plus" />

                <ImageButton
                    android:id="@+id/ib_fb_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="24dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/img_desc_facebook_login"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_facebook"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="@+id/relativeLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toRightOf="@+id/relativeLayout" />
</android.support.constraint.ConstraintLayout>